--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "dev": "parcel src/index.html"
+  },
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
